# docs/swagger.yaml
@@ -101,6 +101,45 @@ paths:
       - application/json
       responses:
         "200":
+          description: GetFileUploadParametersResponse
+          schema:
+            $ref: '#/definitions/recon_responses.GetFileUploadParametersResponse'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: GetFileUploadParameters
+      tags:
+      - GetFileUploadParameters API
+  /StreamFileChunksForRecon:
+    post:
+      consumes:
+      - application/json
+      description: Receives either Source or Comparison File Chunks and routes them
+        appropriately for Reconciliation
+      parameters:
+      - description: GetFileUploadParametersRequest
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/recon_requests.GetFileUploadParametersRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
           description: OK
           schema:
             $ref: '#/definitions/recon_responses.GetFileUploadParametersResponse'
